--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = "0.19.0"
 git2 = "0.18.1"
+smart-default = "0.7.1"
 
 [profile.release]
 codegen-units = 1
