--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "fugitrs"
 crate-type = ["cdylib"]
 
 [dependencies]
+bevy_reflect = "0.12.1"
 git2 = "0.18.1"
 pyo3 = "0.19.0"
 serde = { version = "1.0.193", features = ["derive"] }
